--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,13 +1,15 @@
 {
+  "namespace": "Gunjou",
   "name": "Hades II Approval Process",
-  "version_number": "1.0.0",
+  "version_number": "0.0.1",
   "website_url": "",
-  "description": "Enables toggling of the Arcana \"The Centaur\" in a savefile for speedruns that make use of the White Antler keepsake.",
+  "description": "Ports over the Pact setting 'Approval Process' from the original Hades as 'Vow of Acceptance' ",
   "dependencies": [
     "Hell2Modding-Hell2Modding-1.0.30",
     "SGG_Modding-ModUtil-3.1.1",
     "SGG_Modding-Chalk-2.0.2",
     "SGG_Modding-ReLoad-1.0.1",
     "SGG_Modding-SJSON-1.0.0"
-  ]
+  ],
+  "fullname": "Gunjou-Hades_II_Approval_Process"
 }
